# rustop

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: controller.rs  lib.rs  main.rs  minitop.rs  procinfo.rs
src/specs/: capacity.rs  cpu.rs  info.rs  io.rs  network.rs  processes.rs
ui/: mainwindow.slint
ui/components/: colors.slint  cpu.slint  info.slint  io.slint  network.slint  processes.slint  tile.slint
