[package]
name = "rustop"
version = "0.1.0"
authors = ["leonardo"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
compound_duration = "1.2.1"
serde = "1.0.188"
serde_json = "1.0.105"
slint = "1.2.0"
sysinfo = "0.29.10"
tempfile = "3.8.0"
tokio = {version="1.32.0", features = ["full"]}

[build-dependencies]
slint-build = "1.0"
